checkout/cybersourcePayments/cybersourcePayments/objects/State_Code__mdt/State_Code__mdt.object-meta.xml
<CustomObject>
    <label>State Code</label>
    <pluralLabel>State Codes</pluralLabel>
</CustomObject>