checkout/cybersourcePayments/cybersourcePayments/objects/State_Code__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <referenceTo>Country_Code__mdt</referenceTo>
    <relationshipLabel>State Codes</relationshipLabel>
    <relationshipName>State_Codes</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>